# AI-Voice-Agent

./: .gitignore  main.py  pyproject.toml  requirements.txt
app/: main.py
app/agents/: router.py
app/api/routes/: health.py  webhook.py
app/core/: config.py  logger.py
app/data/: schedule.py
app/db/: __init__.py  database.py  models.py
app/services/: __init__.py  booking_service.py  crm_service.py  email_service.py  llm_service.py
