[project]
name = "aivoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.109.0",
    "git-filter-repo>=2.47.0",
    "google-auth>=2.27.0",
    "groq>=0.4.2",
    "gspread>=6.1.2",
    "httpx>=0.26.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "resend>=2.29.0",
    "uvicorn[standard]>=0.27.0",
]
